--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Text Summarizer</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="frontend/css/style.css">
 </head>
 
 <body>
@@ -90,7 +90,7 @@
 
     <div id="toast" class="toast">Copied</div>
 
-    <script src="script.js"></script>
+    <script src="frontend/js/script.js"></script>
 </body>
 
 </html>
