--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Text Summarizer</title>
-    <link rel="stylesheet" href="frontend/style.css">
+    <link rel="stylesheet" href="frontend/styles.css">
 </head>
 
 <body>
@@ -90,6 +90,7 @@
 
     <div id="toast" class="toast">Copied</div>
 
+  
     <script src="frontend/script.js"></script>
 </body>
 
